<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".Controller.Login">


<ProgressBar
    android:id="@+id/login_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="200dp"
    android:visibility="gone" />

<TextView
    android:id="@+id/tvLoad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:text="@string/loading_please_wait"
    android:textColor="@color/colorPrimaryDark"
    android:textStyle="bold"
    android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:clickable="true"
                android:onClick="todaySpecial"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="7pt">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/food3" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/today_s_special"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="WeelySpecial"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="7pt">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView21"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/food2" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/what_s_on_the_menu_for_the_week"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:clickable="true"
                android:onClick="DessertsClicked"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="7pt">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/desserts" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/for_the_sweet_tooth"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="CommentsCilcked"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="7pt">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="130dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        app:srcCompat="@drawable/comment" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="comments"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>


